--- a/app/views/skm/entry_headers/new_step_2.html.erb
+++ b/app/views/skm/entry_headers/new_step_2.html.erb
@@ -1,4 +1,7 @@
 <%= app_title({:description => t(:new)}) %>
+<script type="text/javascript" src="/javascripts/ext4-all.js"></script>
+<link rel="stylesheet" type="text/css" href="/themes/salesforce2/stylesheets/ext4-all.css"></link>
+
 <%= form_for(@entry_header,:url=>{:action=>"new"},:builder => LabellingFormBuilder, :html => {:name => "new_skm_entry_header"}) do |f| %>
 <div  class="bWizardBlock">
     <div class="pbWizardTitle tertiaryPalette">
@@ -16,7 +19,7 @@
     <div class="pbWizardBody">
       <div class="secondaryPalette">
         <div class="pbBody">
-            <div class="pbSubheader first tertiaryPalette">
+            <div class="pbSubheader tertiaryPalette">
               <span class="pbSubExtra">
                 <span class="requiredLegend">
                   <span class="requiredExampleOuter">
@@ -29,15 +32,27 @@
             </div>
             <div class="pbSubsection">
               <table class="detailList" cellpadding="0" cellspacing="0" border="0">
-                    <%= f.hidden_field :entry_template_id %>
+                <%= f.hidden_field :column_ids %>
                 <tbody>
                     <tr>
-                      <td class="labelCol"><label><%=(t :label_skm_entry_header_title)%></label></td>
-                      <td class="data2Col"><%= f.text_field :entry_title, :size => 40, :required => true%></td>
-                    </tr>
-                    <tr>
-                      <td class="labelCol"><label><%=(t :label_skm_entry_header_keyword_tags)%></label></td>
-                      <td class="data2Col"><%= f.text_field :keyword_tags, :size => 40%></td>
+                      <td class="labelCol">
+                        <div id="tree-div" href="<%= url_for(:controller => "skm/columns", :action=>"get_columns_data", :format=>:json) %>"></div>
+                      </td>
+                      <td class="data2Col">
+                          <table class="detailList" cellpadding="0" cellspacing="0" border="0">
+                                <%= f.hidden_field :entry_template_id %>
+                            <tbody>
+                                <tr>
+                                  <td class="labelCol"><label><%=(t :label_skm_entry_header_title)%></label></td>
+                                  <td class="data2Col"><%= f.text_field :entry_title, :size => 40, :required => true%></td>
+                                </tr>
+                                <tr>
+                                  <td class="labelCol"><label><%=(t :label_skm_entry_header_keyword_tags)%></label></td>
+                                  <td class="data2Col"><%= f.text_field :keyword_tags, :size => 40%></td>
+                                </tr>
+                            </tbody>
+                          </table>
+                      </td>
                     </tr>
                 </tbody>
               </table>
@@ -89,7 +104,6 @@
                 </div>
                 <% end %>          
             <% end %>
-
       </div>
     </div>
     </div>
@@ -114,12 +128,12 @@
 <script type="text/javascript">
   function submit_next(){
     document.new_skm_entry_header.action = "new?step=3";
-    new_skm_entry_header.submit();
+    document.new_skm_entry_header.submit();
   }
 
   function submit_last(){
     document.new_skm_entry_header.action = "new?step=1";
-    new_skm_entry_header.submit();
+    document.new_skm_entry_header.submit();
   }
 </script>
 <% end %>
@@ -128,3 +142,44 @@
     <%= render "skm/entry_headers/sidebar_navigate_menu"%>
     <%= render :partial =>"/irm/common/recently_objects" %>
 <% end -%>
+
+<script>
+Ext.onReady(function() {
+    var treeNode = Ext.getDom("tree-div");
+
+    Ext.define('ColumnField', {
+        extend: 'Ext.data.Model',
+        fields: [
+            {name: 'id',type: 'string'},
+            {name: 'text',type: 'string'},
+            {name: 'sc_id',type: 'string'},
+            {name: 'column_name',type: 'string'},
+            {name: 'column_description',type: 'string'},
+            {name: 'sc_code',type: 'string'}
+        ]
+    });
+    var store = Ext.create('Ext.data.TreeStore', {
+        model: "ColumnField",
+        proxy: {type: 'ajax',url:  treeNode.getAttribute("href") + "?with_check=<%= @entry_header.column_ids%>"}
+    });
+
+    var tree = Ext.create('Ext.tree.Panel', {
+        store: store,
+        rootVisible: false,
+        useArrows: true,
+        renderTo: 'tree-div',
+        width: 200,
+        height: 80,
+        listeners:{
+            'itemclick':function(view, record, item, index, e){
+                var column_ids = [];
+                Ext.Array.each(tree.getChecked(), function(rec){
+                    column_ids.push(rec.get('id'));
+                });
+                Ext.getDom("skm_entry_header_column_ids").setAttribute("value", column_ids);
+            }
+        }
+    });
+
+});
+</script>
