--- a/app/views/skm/entry_headers/new_step_3.html.erb
+++ b/app/views/skm/entry_headers/new_step_3.html.erb
@@ -3,6 +3,7 @@
     <%= f.hidden_field :entry_template_id %>
     <%= f.hidden_field :entry_title %>
     <%= f.hidden_field :keyword_tags %>
+    <%= f.hidden_field :column_ids %>
 <div  class="bWizardBlock">
     <div class="pbWizardTitle tertiaryPalette">
         <div class="ptRightTitle">
@@ -105,12 +106,12 @@
 <script type="text/javascript">
   function submit_next(){
     document.new_skm_entry_header.action = "new?step=4";
-    new_skm_entry_header.submit();
+    document.new_skm_entry_header.submit();
   }
 
   function submit_last(){
     document.new_skm_entry_header.action = "new?step=2";
-    new_skm_entry_header.submit();
+    document.new_skm_entry_header.submit();
   }
 
   function delete_subject(tar){
