重构权限，功能菜单，简档的页面，数据model和controller

--- a/app/views/irm/function_groups/_edit_form.html.erb
+++ b/app/views/irm/function_groups/_edit_form.html.erb
@@ -33,7 +33,7 @@
         <tbody>
             <tr>
               <td class="labelCol"><label><%=(t :label_irm_function_group_group_code)%></label></td>
-              <td class="dataCol"><%= @function_group.group_code%></td>
+              <td class="dataCol"><%= @function_group.code%></td>
               <td class="labelCol empty">&nbsp;</td>
               <td class="dataCol empty">&nbsp;</td>
             </tr>
