--- a/app/views/irm/permissions/index.html.erb
+++ b/app/views/irm/permissions/index.html.erb
@@ -1,3 +1,3 @@
 <%= setting_title %>
-<%= view_filter("IRM_PERMISSIONS_INDEX_A","permissions_list") %>
+<%= view_filter("IRM_PERMISSIONS_INDEX_A","IRM_PERMISSIONS","permissions_list") %>
 <%= render "index_data_grid" %>
