--- a/app/views/irm/function_groups/_new_form.html.erb
+++ b/app/views/irm/function_groups/_new_form.html.erb
@@ -33,7 +33,7 @@
         <tbody>
             <tr>
               <td class="labelCol"><label><%=(t :label_irm_function_group_group_code)%></label></td>
-              <td class="dataCol"><%=f.text_field :group_code, :required=>true,:irm_uppercase=>true%></td>
+              <td class="dataCol"><%=f.text_field :code, :required=>true,:irm_uppercase=>true%></td>
               <td class="labelCol empty">&nbsp;</td>
               <td class="dataCol empty">&nbsp;</td>
             </tr>
