--- a/app/views/irm/function_groups/index.html.erb
+++ b/app/views/irm/function_groups/index.html.erb
@@ -34,7 +34,7 @@
         </div>
         <%= datatable("function_groups_list",url_for(:action=>"get_data",:format=>"json"),
                       [{:key=>"id",:label=>t(:operation),:formatter=>"Y.irm.template", :width => "80px"},
-                       {:key=>"group_code",:label=>t(:label_irm_function_group_group_code),:sortable=>true},
+                       {:key=>"code",:label=>t(:label_irm_function_group_group_code),:sortable=>true},
                        {:key=>"name",:label=>t(:label_irm_function_group_name),:sortable=>true},
                        {:key=>"description",:label=>t(:label_irm_function_group_description)},
                        {:key=>"status_code",:label=>t(:active),:sortable=>true,:formatter=>"Y.irm.template", :width => "40px"}],
