--- a/app/views/irm/function_groups/show.html.erb
+++ b/app/views/irm/function_groups/show.html.erb
@@ -20,7 +20,7 @@
         <tbody>
             <tr>
               <td class="labelCol"><label><%=(t :label_irm_function_group_group_code)%></label></td>
-              <td class="data2Col"><%= @function_group.group_code%></td>
+              <td class="data2Col"><%= @function_group.code%></td>
             </tr>
             <tr>
               <td class="labelCol"><label><%=(t :label_irm_function_group_name)%></label></td>
@@ -64,12 +64,14 @@
             <%= check_img("{status_code}") %>
           </div>
         </div>
-        <%= datatable("functions_list",url_for(:controller=>"irm/functions",:action=>"get_data",:group_code=>@function_group.group_code,:format=>"json"),
+        <%= datatable("functions_list",url_for(:controller=>"irm/functions",:action=>"get_data",:function_group_id=>@function_group.id,:format=>"json"),
                       [{:key=>"id",:label=>t(:operation),:formatter=>"Y.irm.template", :width => "80px"},
-                       {:key=>"function_code",:label=>t(:label_irm_function_function_code),:sortable=>true},
+                       {:key=>"code",:label=>t(:label_irm_function_function_code),:sortable=>true},
                        {:key=>"name",:label=>t(:label_irm_function_name),:sortable=>true},
                        {:key=>"description",:label=>t(:label_irm_function_description),:sortable=>true},
-                       {:key=>"status_code",:label=>t(:active),:sortable=>true,:formatter=>"Y.irm.template"}]) %>
+                       {:key=>"status_code",:label=>t(:active),:sortable=>true,:formatter=>"Y.irm.template"}],
+                       {:paginator_box=>"functionPaginator"}) %>
+        <div id="functionPaginator"></div>
       </div>
     </div>
 </div>
