--- a/app/views/irm/functions/index.html.erb
+++ b/app/views/irm/functions/index.html.erb
@@ -30,7 +30,7 @@
         </div>
         <%= datatable("functions_list",url_for(:action=>"get_data",:format=>"json"),
                       [{:key=>"id",:label=>t(:operation),:formatter=>"Y.irm.template", :width => "80px"},
-                       {:key=>"function_code",:label=>t(:label_irm_function_function_code),:sortable=>true},
+                       {:key=>"code",:label=>t(:label_irm_function_function_code),:sortable=>true},
                        {:key=>"name",:label=>t(:label_irm_function_name),:sortable=>true},
                        {:key=>"description",:label=>t(:label_irm_function_description),:sortable=>true},
                        {:key=>"status_code",:label=>t(:active),:sortable=>true,:formatter=>"Y.irm.template"}],
