--- a/app/views/irm/tabs/_edit_form.html.erb
+++ b/app/views/irm/tabs/_edit_form.html.erb
@@ -1,10 +1,10 @@
-<%= form_for(@tab,:url=>{:action=>"create"},:builder => LabellingFormBuilder) do |f| %>
+<%= form_for(@tab,:url=>{:action=>"update"},:builder => LabellingFormBuilder) do |f| %>
 <div id="ep" class="bEditBlock bPageBlock">
   <div class="pbHeader">
     <table cellpadding="0" cellspacing="0" border="0">
       <tbody>
         <tr>
-          <td class="pbTitle"><h2 class="mainTitle"><%=t(:label_irm_tab_new)%></h2></td>
+          <td class="pbTitle"><h2 class="mainTitle"><%=t(:label_irm_tab_edit)%></h2></td>
           <td id="topButtonRow" class="pbButton">
             <div class="button"><%= f.submit t(:save)%></div>
             <div class="button"><%= link_back t(:cancel)%></div>
@@ -29,43 +29,35 @@
     <div class="pbSubsection">
       <table class="detailList" cellpadding="0" cellspacing="0" border="0">
         <tbody>
-                      <tr>
-              <td class="labelCol"><label for="tab_business_object_id"><%=t(:label_irm_tab_business_object_id)%></label></td>
-              <td class="dataCol"><%=f.text_field :business_object_id, :required=>true ,:id=>"tab_business_object_id"%></td>
+            <tr>
+              <td class="labelCol"><label for="tab_code"><%=t(:label_irm_tab_code)%></label></td>
+              <td class="dataCol"><label><%=@tab.code%></label></td>
               <td class="labelCol empty">&nbsp;</td>
               <td class="dataCol empty">&nbsp;</td>
             </tr>
-                      <tr>
-              <td class="labelCol"><label for="tab_function_group_id"><%=t(:label_irm_tab_function_group_id)%></label></td>
-              <td class="dataCol"><%=f.text_field :function_group_id, :required=>true ,:id=>"tab_function_group_id"%></td>
-              <td class="labelCol empty">&nbsp;</td>
-              <td class="dataCol empty">&nbsp;</td>
-            </tr>
-                      <tr>
-              <td class="labelCol"><label for="tab_style_color"><%=t(:label_irm_tab_style_color)%></label></td>
-              <td class="dataCol"><%=f.text_field :style_color, :required=>true ,:id=>"tab_style_color"%></td>
-              <td class="labelCol empty">&nbsp;</td>
-              <td class="dataCol empty">&nbsp;</td>
-            </tr>
-                      <tr>
-              <td class="labelCol"><label for="tab_style_image"><%=t(:label_irm_tab_style_image)%></label></td>
-              <td class="dataCol"><%=f.text_field :style_image, :required=>true ,:id=>"tab_style_image"%></td>
-              <td class="labelCol empty">&nbsp;</td>
-              <td class="dataCol empty">&nbsp;</td>
-            </tr>
-                      <tr>
+            <tr>
               <td class="labelCol"><label for="tab_name"><%=t(:label_irm_tab_name)%></label></td>
               <td class="dataCol"><%=f.text_field :name, :required=>true ,:id=>"tab_name"%></td>
               <td class="labelCol empty">&nbsp;</td>
               <td class="dataCol empty">&nbsp;</td>
             </tr>
-                      <tr>
-              <td class="labelCol"><label for="tab_description"><%=t(:label_irm_tab_description)%></label></td>
-              <td class="dataCol"><%=f.text_field :description, :required=>true ,:id=>"tab_description"%></td>
+            <tr>
+              <td class="labelCol"><label for="tab_function_group_id"><%=t(:label_irm_tab_function_group)%></label></td>
+              <td class="dataCol"><%=f.blank_select :function_group_id,available_function_group,{}, :required=>true ,:id=>"tab_function_group_id"%></td>
               <td class="labelCol empty">&nbsp;</td>
               <td class="dataCol empty">&nbsp;</td>
             </tr>
-                  </tbody>
+            <tr>
+              <td class="labelCol"><label for="tab_business_object_id"><%=t(:label_irm_tab_business_object)%></label></td>
+              <td class="dataCol"><%=f.blank_select :business_object_id,available_business_object_with_id, :required=>true ,:id=>"tab_business_object_id"%></td>
+              <td class="labelCol empty">&nbsp;</td>
+              <td class="dataCol empty">&nbsp;</td>
+            </tr>
+            <tr>
+              <td class="labelCol"><label for="tab_description"><%=t(:label_irm_tab_description)%></label></td>
+              <td class="dataCol" colspan="3" width="82%"><%=f.text_area :description,:rows=>4,:cols=>60,:id=>"tab_description"%></td>
+            </tr>
+        </tbody>
       </table>
     </div>
   </div>
