--- a/app/views/irm/setting/_level_one.html.erb
+++ b/app/views/irm/setting/_level_one.html.erb
@@ -11,7 +11,7 @@
   <div class="ptBody secondaryPalette">
     <div class="content">
       <img title="" class="pageTitleIcon" alt="" src="/images/s.gif">
-      <h1 class="pageType noSecondHeader"><%=menu_entry_name(params[:mi],params[:mc])%></h1>
+      <h1 class="pageType noSecondHeader"><%=@menu_entry[:name]%></h1>
       <div class="blank">&nbsp;</div>
     </div><div class="links">
 
@@ -20,7 +20,7 @@
 
   </div>
 </div>
-<% sub_entries(params[:mc]).each do |en| %>
+<% sub_entries(@menu_entry[:sub_menu_id]).each do |en| %>
 <div class="listRelatedObject setupBlock">
   <div class="bTask">
       <div class="bPageBlock">
