--- a/app/views/irm/setting/_level_two.html.erb
+++ b/app/views/irm/setting/_level_two.html.erb
@@ -11,7 +11,7 @@
   <div class="ptBody secondaryPalette">
     <div class="content">
       <img title="" class="pageTitleIcon" alt="" src="/images/s.gif">
-      <h1 class="pageType noSecondHeader"><%=menu_entry_name(params[:mi])%></h1>
+      <h1 class="pageType noSecondHeader"><%=@menu_entry[:name]%></h1>
       <div class="blank">&nbsp;</div>
     </div><div class="links">
 
@@ -27,7 +27,7 @@
             <table cellpadding="0" cellspacing="0" border="0">
               <tbody>
                 <tr>
-                  <td class="pbTitle"><h2 class="mainTitle"><%=menu_entry_name(params[:mi])%></h2></td>
+                  <td class="pbTitle"><h2 class="mainTitle"><%=@menu_entry[:name]%></h2></td>
                   <td id="topButtonRow" class="pbButton">
                   </td>
                   <td class="pbHelp">
@@ -39,7 +39,7 @@
               <div class="pbBody">
                 <table cellspacing="0" cellpadding="0" border="0" width="100%" class="setupOverview">
                   <tbody>
-                  <%= generate_entries_table(params[:mc]) %>
+                  <%= generate_entries_table(@menu_entry.id) %>
                   </tbody>
                 </table>
              </div>
