--- a/app/views/layouts/application_right.html.erb
+++ b/app/views/layouts/application_right.html.erb
@@ -38,7 +38,7 @@
                     <div class="multiforce">
                       <div class="messages"></div>
                       <div>
-                        <%= current_role_menu %>
+                        <%= current_application_menu %>
                         <span class="navLinks" style="float:right">
                           <span class="linkElements">
                             <a style="margin-right:29px;" href="#" onclick="window.open ('/helpfiles/index.html', 'Ironmine_Help', 'height=800px, width=870px, top=0, left=0, toolbar=no, menubar=no,scrollbars=yes, location=no, status=no');"><%= t :help %></a>
@@ -78,7 +78,7 @@
                             <div id="tabNavigation" class="tabNavigation">
                                 <div class="tabBarLeft"></div>
                                 <table id="tabBar" class="tab" cellpadding="0" cellspacing="0">
-                                    <%= level_two_menu %>
+                                    <%= render_tabs %>
                                 </table>
                                 <div class="tabBarRight"></div>
                             </div>
