--- a/app/views/layouts/setting.html.erb
+++ b/app/views/layouts/setting.html.erb
@@ -33,7 +33,7 @@
                     <div class="multiforce">
                       <div class="messages"></div>
                       <div>
-                        <%= current_role_menu %>
+                        <%= current_application_menu %>
                         <span id="settingMenu" class="menuParent" style="float:right">
                           <div  class="menuLabel">
                             <span tabindex="0" style="" id="userNavTop" ><%= Irm::Person.current.name %></span>
@@ -68,7 +68,7 @@
                             <div id="tabNavigation" class="tabNavigation">
                                 <div class="tabBarLeft"></div>
                                 <table id="tabBar" class="tab" cellpadding="0" cellspacing="0">
-                                    <%= level_two_menu %>
+                                    <%= render_tabs(false) %>
                                 </table>
                                 <div class="tabBarRight"></div>
                             </div>
