--- a/app/views/skm/entry_headers/_edit_form.html.erb
+++ b/app/views/skm/entry_headers/_edit_form.html.erb
@@ -1,5 +1,8 @@
 <%= app_title %>
+<script type="text/javascript" src="/javascripts/ext4-all.js"></script>
+<link rel="stylesheet" type="text/css" href="/themes/salesforce2/stylesheets/ext4-all.css"></link>
 <%= form_for(@entry_header,:url=>{:action=>"update"},:builder => LabellingFormBuilder, :html => {:name => "edit_form", :id => "edit_form"}) do |f| %>
+<%= f.hidden_field :column_ids %>
 <div id="ep" class="bEditBlock bPageBlock">
   <div class="pbHeader">
     <table cellpadding="0" cellspacing="0" border="0">
@@ -32,16 +35,27 @@
       <table class="detailList" cellpadding="0" cellspacing="0" border="0">
         <tbody>
             <tr>
-              <td class="labelCol"><label><%=(t :label_skm_entry_header_doc_number)%></label></td>
-              <td class="data2Col"><%= @entry_header.doc_number%></td>
-            </tr>
-            <tr>
-              <td class="labelCol"><label><%=(t :label_skm_entry_header_title)%></label></td>
-              <td class="data2Col"><%=f.text_field :entry_title, :required=>true%></td>
-            </tr>
-            <tr>
-              <td class="labelCol"><label><%=(t :label_skm_entry_header_keyword_tags)%></label></td>
-              <td class="data2Col"><%=f.text_field :keyword_tags%></td>
+              <td class="labelCol">
+                <div id="tree-div" href="<%= url_for(:controller => "skm/columns", :action=>"get_columns_data", :format=>:json) %>"></div>
+              </td>
+              <td class="data2Col">
+                  <table class="detailList" cellpadding="0" cellspacing="0" border="0">
+                    <tbody>
+                        <tr>
+                          <td class="labelCol"><label><%=(t :label_skm_entry_header_doc_number)%></label></td>
+                          <td class="data2Col"><%= @entry_header.doc_number%></td>
+                        </tr>
+                        <tr>
+                          <td class="labelCol"><label><%=(t :label_skm_entry_header_title)%></label></td>
+                          <td class="data2Col"><%=f.text_field :entry_title, :required=>true%></td>
+                        </tr>
+                        <tr>
+                          <td class="labelCol"><label><%=(t :label_skm_entry_header_keyword_tags)%></label></td>
+                          <td class="data2Col"><%=f.text_field :keyword_tags%></td>
+                        </tr>
+                    </tbody>
+                  </table>
+              </td>
             </tr>
         </tbody>
       </table>
@@ -88,7 +102,7 @@
     {
         document.edit_form.action = "update?status=DRAFT";
     }
-    edit_form.submit();
+    document.edit_form.submit();
   }
 
   function submit_published(){
@@ -100,7 +114,48 @@
     {
         document.edit_form.action = "update?status=PUBLISHED";
     }
-    edit_form.submit();
+    document.edit_form.submit();
   }
 </script>    
 <% end %>
+
+<script>
+Ext.onReady(function() {
+    var treeNode = Ext.getDom("tree-div");
+
+    Ext.define('ColumnField', {
+        extend: 'Ext.data.Model',
+        fields: [
+            {name: 'id',type: 'string'},
+            {name: 'text',type: 'string'},
+            {name: 'sc_id',type: 'string'},
+            {name: 'column_name',type: 'string'},
+            {name: 'column_description',type: 'string'},
+            {name: 'sc_code',type: 'string'}
+        ]
+    });
+    var store = Ext.create('Ext.data.TreeStore', {
+        model: "ColumnField",
+        proxy: {type: 'ajax',url:  treeNode.getAttribute("href") + "?with_check=<%= @entry_header.column_ids%>"}
+    });
+
+    var tree = Ext.create('Ext.tree.Panel', {
+        store: store,
+        rootVisible: false,
+        useArrows: true,
+        renderTo: 'tree-div',
+        width: 200,
+        height: 80,
+        listeners:{
+            'itemclick':function(view, record, item, index, e){
+                var column_ids = [];
+                Ext.Array.each(tree.getChecked(), function(rec){
+                    column_ids.push(rec.get('id'));
+                });
+                Ext.getDom("skm_entry_header_column_ids").setAttribute("value", column_ids);
+            }
+        }
+    });
+
+});
+</script>
