--- a/app/views/icm/incident_journals/_new_form.html.erb
+++ b/app/views/icm/incident_journals/_new_form.html.erb
@@ -288,7 +288,7 @@
               </td>
               <% end%>
             </tr>
-            <% unless Irm::Role.current&&Irm::Role.current.service_role_type.eql?("CUSTOMER")%>
+            <% unless Irm::Person.current.profile&&Irm::Person.current.profile.user_license.eql?("REQUESTER")%>
             <tr>
               <td class="dataCol">
                 <label for="incident_request_incident_status_code"><%=t(:label_icm_incident_reply_incident_status_code)%></label>
