添加维护事故单状态转移

--- a/app/views/icm/incident_statuses/index.html.erb
+++ b/app/views/icm/incident_statuses/index.html.erb
@@ -1,4 +1,71 @@
+<style type="text/css">
+  #statusMatrix{
+    padding-left: 20px;
+  }
+  #statusMatrix th{
+    font-weight:bold;
+    padding:5px;
+  }
+  #statusMatrix td{
+    text-align: center;
+    min-width: 50px;
+    padding:5px;
+    border: solid 1px;
+    border-color:#CBCBCB;
+  }
+  #statusMatrix th.to{
+    text-align: center;
+  }
+  #statusMatrix th.from{
+    text-align: right;
+  }
+</style>
 <%= setting_title %>
+<div class="listRelatedObject setupBlock">
+    <div class="bPageBlock">
+      <div class="pbHeader">
+        <table cellpadding="0" cellspacing="0" border="0">
+          <tbody>
+            <tr>
+              <td class="pbTitle"><h2 class="mainTitle"><%= t(:label_icm_incident_status_edit_transform) %></h2></td>
+              <td  class="pbButton">
+                <div class="button"><%= link_to t(:edit), {:action => "edit_transform"}%></div>
+              </td>
+              <td class="pbHelp">
+              </td>
+            </tr>
+          </tbody>
+        </table>
+      </div>
+      <div class="pbBody">
+        <table id="statusMatrix" cellpadding="0" cellspacing="0" border="0">
+          <% incident_statuses = available_incident_status;
+             incident_status_ids = incident_statuses.collect{|i| i.id};
+             events = available_incident_event_name;
+             status_transforms = available_status_transform;
+          %>
+          <tbody>
+            <tr>
+              <th class="from"></th>
+              <% incident_statuses.each do |to_status| %>
+                <th class="to"><%= to_status[:name]%></th>
+              <% end %>
+            </tr>
+            <% incident_statuses.each do |from_status| %>
+              <tr>
+                <th class="from"><%= from_status[:name]%></th>
+                <% incident_status_ids.each do |to_id| %>
+                  <td title="<%=from_status[:name]%>">
+                    <%= events[(status_transforms[from_status.id]&&status_transforms[from_status.id][to_id]) ? status_transforms[from_status.id][to_id] : nil] %>
+                  </td>
+                <% end %>
+              </tr>
+            <% end %>
+          </tbody>
+        </table>
+      </div>
+    </div>
+</div>
 <div class="listRelatedObject setupBlock">
     <div class="bPageBlock">
       <div class="pbHeader">
