--- a/app/views/icm/incident_statuses/edit_transform.html.erb
+++ b/app/views/icm/incident_statuses/edit_transform.html.erb
@@ -41,7 +41,7 @@
       <h3><%=t(:label_icm_incident_status_info)%></h3>
     </div>
     <div class="pbSubsection">
-      <table id="statusMatrix" cellpadding="0" cellspacing="0" border="0">
+      <table id="statusMatrix" cellpadding="0" cellspacing="0" border="0" error="<%=t(:label_irm_incident_status_transform_event_error) %>">
         <% incident_statuses = available_incident_status;
            incident_status_ids = incident_statuses.collect{|i| i.id};
            events = available_incident_request_event;
@@ -59,7 +59,7 @@
               <th class="from"><%= from_status[:name]%></th>
               <% incident_status_ids.each do |to_id| %>
                 <td>
-                  <%= blank_select_tag("status_transforms[#{from_status.id}][#{to_id}]",events,(status_transforms[from_status.id]&&status_transforms[from_status.id][to_id]) ? status_transforms[from_status.id][to_id] : nil,{:include_blank=>"",:title=>from_status[:name]}) %>
+                  <%= blank_select_tag("status_transforms[#{from_status.id}][#{to_id}]",events,(status_transforms[from_status.id]&&status_transforms[from_status.id][to_id]) ? status_transforms[from_status.id][to_id] : nil,{:class=>"eventSelect",:ref=>from_status.id,:include_blank=>"",:title=>from_status[:name]}) %>
                 </td>
               <% end %>
             </tr>
@@ -83,4 +83,25 @@
   </div>
 </div>
 <% end %>
+<script type="text/javascript">
+  GY.use(function(Y){
+      function getRefValues(ref,value){
+        if(!value||value==""){
+            return 0;
+        }
+        var count = 0;
+        Y.all("select.eventSelect[ref="+ref+"]").each(function(node){
+            if(node.get("value")==value)
+              count = count+1;
+        });
+        return count;
+      }
+      Y.all("select.eventSelect").on("change",function(e){
+        if(getRefValues(e.target.getAttribute("ref"),e.target.get("value"))>1){
+          e.target.set("value","");
+          alert(Y.one("#statusMatrix").getAttribute("error"));
+        }
+      })
+  });
+</script>
 
