--- a/app/views/icm/priority_codes/_new_form.html.erb
+++ b/app/views/icm/priority_codes/_new_form.html.erb
@@ -35,20 +35,28 @@
               <td class="labelCol"><label><%=(t :label_icm_priority_code_company)%></label></td>
               <td class="dataCol"><%=f.select :company_id,nullable_options_for_select(selectable_companies,@priority_code.company_id),
                                                     {},{:require=>true}%></td>
+
+              <td class="labelCol empty">&nbsp;</td>
+              <td class="dataCol empty">&nbsp;</td>
+            </tr>
+            <tr>
+
               <td class="labelCol"><label><%=(t :label_icm_priority_code_priority_code)%></label></td>
               <td class="dataCol"><%=f.text_field :priority_code, :required=>true,:irm_uppercase=>true%></td>
+              <td class="labelCol empty">&nbsp;</td>
+              <td class="dataCol empty">&nbsp;</td>
             </tr>
             <tr>
               <td class="labelCol"><label><%=(t :label_icm_priority_code_name)%></label></td>
               <td class="dataCol"><%=f.text_field :name, :required=>true%></td>
-              <td class="labelCol"><label><%=(t :label_icm_priority_code_low_weight_value)%></label></td>
-              <td class="dataCol"><%=f.text_field :low_weight_value, :required=>true%></td>
+              <td class="labelCol empty">&nbsp;</td>
+              <td class="dataCol empty">&nbsp;</td>
             </tr>
             <tr>
               <td class="labelCol"><label><%=(t :label_icm_priority_code_description)%></label></td>
               <td class="dataCol"><%=f.text_area :description,:rows=>4%></td>
-              <td class="labelCol"><label><%=(t :label_icm_priority_code_high_weight_value)%></label></td>
-              <td class="dataCol"><%=f.text_field :high_weight_value, :required=>true%></td>
+              <td class="labelCol empty">&nbsp;</td>
+              <td class="dataCol empty">&nbsp;</td>
             </tr>
         </tbody>
       </table>
