--- a/app/views/icm/urgence_codes/_edit_form.html.erb
+++ b/app/views/icm/urgence_codes/_edit_form.html.erb
@@ -37,7 +37,7 @@
               <td class="labelCol"><label  for="urgence_code_name"><%=(t :label_icm_urgence_code_name)%></label></td>
               <td class="dataCol"><%=f.text_field :name,:value=>@urgence_code[:name], :required=>true,:id=>"urgence_code_name" %></td>
               <td class="labelCol"><label for="urgence_code_weight_value"><%=(t :label_icm_urgence_code_weight_values)%></label></td>
-              <td class="dataCol"><%=f.text_field :weight_values, :required=>true,:id=>"urgence_code_weight_value" %></td>
+              <td class="dataCol"><%=@urgence_code.weight_values%></td>
             </tr>
             <tr>
               <td class="labelCol"><label for="urgence_code_display_sequence"><%=(t :display_sequence)%></label></td>
