--- a/app/views/irm/bulletins/_edit_form.html.erb
+++ b/app/views/irm/bulletins/_edit_form.html.erb
@@ -147,6 +147,73 @@
     </div>
   </div>
 
+  <div class="pbBody">
+    <div class="pbSubheader first tertiaryPalette">
+      <h3><%= t(:label_irm_bulletin_attachment) %></h3>
+    </div>
+    <div class="pbSubsection">
+      <table cellpadding="0" cellspacing="0" border="0">
+        <thead>
+          <tr>
+            <th width="20%"></th>
+            <th width="40px"></th>
+            <th><%= t :label_skm_file_name %></th>
+            <th><%= t :label_skm_file_category %></th>
+            <th><%= t :description%></th>
+          </tr>
+        </thead>
+        <tbody id="file_body">
+            <tbody id="exist_attachments_list">
+            </tbody>
+            <tr id="file_0">
+              <td class="dataCol"></td>
+              <td class="dataCol"><%= link_to t(:delete), {}, {:href => "javascript:void(0);", :onclick => "delete_line(0);"} %></td>
+              <td class="dataCol"><%=file_field_tag "file[0][file]"%></td>
+              <td class="dataCol"><%=select_tag "file[0][file_category]", options_for_select(available_file_categories)%></td>
+              <td class="dataCol"><%=text_field_tag "file[0][description]", "", {:rows => 3, :cols => 35}%></td>
+            </tr>
+            <tr id="file_1">
+              <td class="dataCol"></td>
+              <td class="dataCol"><%= link_to t(:delete), {}, {:href => "javascript:void(0);", :onclick => "delete_line(1);"} %></td>
+              <td class="dataCol"><%=file_field_tag "file[1][file]"%></td>
+              <td class="dataCol"><%=select_tag "file[1][file_category]", options_for_select(available_file_categories)%></td>
+              <td class="dataCol"><%=text_field_tag "file[1][description]", "", {:rows => 3, :cols => 35}%></td>
+            </tr>
+            <tr id="file_2">
+              <td class="dataCol"></td>
+              <td class="dataCol"><%= link_to t(:delete), {}, {:href => "javascript:void(0);", :onclick => "delete_line(2);"} %></td>
+              <td class="dataCol"><%=file_field_tag "file[2][file]"%></td>
+              <td class="dataCol"><%=select_tag "file[2][file_category]", options_for_select(available_file_categories)%></td>
+              <td class="dataCol"><%=text_field_tag "file[2][description]", "", {:rows => 3, :cols => 35}%></td>
+            </tr>
+            <tr id="file_3">
+              <td class="dataCol"></td>
+              <td class="dataCol"><%= link_to t(:delete), {}, {:href => "javascript:void(0);", :onclick => "delete_line(3);"} %></td>
+              <td class="dataCol"><%=file_field_tag "file[3][file]"%></td>
+              <td class="dataCol"><%=select_tag "file[3][file_category]", options_for_select(available_file_categories)%></td>
+              <td class="dataCol"><%=text_field_tag "file[3][description]", "", {:rows => 3, :cols => 35}%></td>
+            </tr>
+            <tr id="file_4">
+              <td class="dataCol"></td>
+              <td class="dataCol"><%= link_to t(:delete), {}, {:href => "javascript:void(0);", :onclick => "delete_line(4);"} %></td>
+              <td class="dataCol"><%=file_field_tag "file[4][file]"%></td>
+              <td class="dataCol"><%=select_tag "file[4][file_category]", options_for_select(available_file_categories)%></td>
+              <td class="dataCol"><%=text_field_tag "file[4][description]", "", {:rows => 3, :cols => 35}%></td>
+            </tr>
+        </tbody>
+        <tbody>
+            <tr>
+              <td class="dataCol"></td>
+              <td class="dataCol"></td>
+              <td class="dataCol"><%= link_to t(:label_skm_file_add_line), {}, {:href => "javascript:void(0);", :onclick => "generate_line();"} %></td>
+              <td class="dataCol"></td>
+              <td class="dataCol"></td>
+            </tr>
+        </tbody>
+      </table>
+    </div>
+  </div>
+
   <div class="pbBottomButtons">
     <table cellpadding="0" cellspacing="0" border="0">
       <tbody>
